--- a/Coordination of Care.html
+++ b/Coordination of Care.html
@@ -5,8 +5,24 @@
   <div class=head>
     <p> Description of Care Coordination Activities to Date: <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Description of Care Coordination Activities",CoordinationofCare)'></i></p>
   </div>
+  <!--
   <h4> **Please list all Coordination of care activities that have occurred within the past 6-months** </h4>
+  -->
+  <br>
   <div class=med>
+  <table id=commLog>
+    <col width=20%>
+    <col width=20%>
+    <col width=60%>
+    <tr>
+      <th> Provider </th>
+      <th> Date of Most Recent Contact </th>
+      <th> Summary </th>
+    </tr>
+  </table>
+  
+  <!--
+  <br><br>
   <table>
   <col width=20%>
   <col width=20%>
@@ -75,5 +91,6 @@
       <td><textarea id="COCOtherSummary" style="width: 99%;" rows="5" name="COCOtherSummary"></textarea></td>
     </tr>
   </table>
+  -->
   </div>
 </div>
