--- a/Family Concerns.html
+++ b/Family Concerns.html
@@ -57,6 +57,20 @@
   <div class=head>
     <p> Maladaptive Behaviors Identified By Family <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Identified Maladaptive Behaviors",famMalBeh)'></i></p>
   </div>
+  <br>
+  <select class="js-example-basic-multiple" name="Maladaptive Behaviors" multiple="multiple" id='MaladaptiveSelect'>
+  </select>
+  <br>
+
   <div class=data id=MaladaptiveList>
+  <br>
+    <div class=med>
+      <table id='descriptionTable'>
+        <tr>
+          <th>Behavior</th>
+          <th>Description</th>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
