--- a/Past and Current Services.html
+++ b/Past and Current Services.html
@@ -239,7 +239,7 @@
   <div id='isIEPTrue' hidden>
     <h2>Service Delivery IEP:</h2>
     <br>
-    <strong>Upload Services in Other Settings Table: </strong><input type='button' onclick='createPicker(iepCallBack);' id='IEPDrive' value='Drive Picker'><p id=IEPTableCont> </p> <img id=IEPTableImage src= 'https://drive.google.com/file/d/1kCsj1dgc4is4FztQNIy7Hpge2Kzsr7gz/preview' style="width:100%; max-width: 800px;"/>
+    <strong>Upload Services in Other Settings Table: </strong><input type='button' onclick='createPicker(iepCallBack,"image");' id='IEPDrive' value='Drive Picker'><p id=IEPTableCont> </p> <img id=IEPTableImage src= 'https://drive.google.com/file/d/1kCsj1dgc4is4FztQNIy7Hpge2Kzsr7gz/preview' style="width:100%; max-width: 800px;"/>
     <br>
   </div>
   <div id='isEvalTrue' hidden>
