--- a/Vineland Assessment.html
+++ b/Vineland Assessment.html
@@ -14,9 +14,12 @@
 <label for="vinelandIQScore" style="width: 50px;">Overall IQ Score: </label>
 <input type="text" id="vinelandIQScore" name="vinelandIQScore"><br>
 </div>
-<div class=basic id=VinelandSummary>
+<input type='button' onclick='createPicker(vinelandCallBack, "doc");' id='VinelandDrive' value='Drive Picker'> <p id=vinelandTableCont> </p>
+<!--<div class=basic id=VinelandSummary>
 <h4> Overall Summary<i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Overall Summary",VinelandSummary)'></i></h4>
   <div class=basic>
+  
+  
     <textarea id="vinelandSummary" name="vinelandSummary" rows="23" style="width:99%;">The Vineland-3 is a standardized measure of adaptive behavior-the things that people do to function in their everyday lives. Whereas ability measures focus on what the examinee can do in a testing situation, the Vineland-3 focuses on what he or she actually does in daily life. Because it is a norm-based instrument, the examinee's adaptive functioning is compared to that of others his or her age.
 
 X was evaluated using the Vineland-3 Comprehensive Interview Form on XX/XX/XXXX. Parent First & Last Name, X’s mother, was interviewed by BACS Name, who completed the form.
@@ -30,9 +33,13 @@ The Communication domain measures how well X listens and understands, expresses 
 The Daily Living Skills domain assesses X's performance of the practical, everyday tasks of living that are appropriate for his/her age. His/Her standard score for Daily Living Skills is 79, which corresponds to a percentile rank of 8. This domain is a relative weakness for X.
 
 X's score for the Socialization domain reflects her functioning in social situations. His/Her Socialization standard score is 90. The percentile rank is 25.
-    </textarea>
+    </textarea> 
   </div>
+  
+ 
 </div>
+-->
+<!--
 <div class=basic id=DASS>
   <h4>Developmental Assessment Score Summary <i class="fa fa-bookmark" aria-hidden="true" title="Bookmark this section" onclick='openModal("Developmental Assessment Score Summary",DASS)'></i></h4>
   <label for="vinelandScoreTableFile">Upload Score Summary File:</label>
@@ -150,3 +157,5 @@ X's score for the Socialization domain reflects her functioning in social situat
     </table>
   </div>
 </div>
+
+-->
