--- a/Etc.html
+++ b/Etc.html
@@ -1,6 +1,13 @@
+    <input type='button' onclick='createPicker(rethinkReportCallBack, "doc");' value='Drive Picker'>
+    <!--
     <input type="file" id='importReportFile' onchange="fileReportUpload(this, 'importTest','importImage')"> 
-    <div><p id=importTest><img id=importImage src= '#' style="width:100%; max-width: 800px;"/></p><input type=button onclick='submitReportParse();' value="Import Report"></div>
-
+    -->
+    <div><p id=importTest><img id=importImage src= '#' style="width:100%; max-width: 800px;"/></p>
+    
+    <!--
+    <input type=button onclick='submitReportParse();' value="Import Report"></div>
+    -->
+    
 <div style="border-bottom: 1px solid #666;">
   
   
