--- a/Form.html
+++ b/Form.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 
   
   <?!= include('Nav/Side Bar _css');?>
@@ -37,7 +39,7 @@
   <a onclick=goToSection(this) id= 'BEHRef'                             >BEH Reduction Progress</a>
   <a onclick=goToSection(this) id= 'PTRef'                             >Parent Training Goals</a>
   
-  <br><br><br><br>
+  <br>
   <a onclick=showAll(this) id= 'AllRef' class="activePage"          >VIEW ALL</a>
 </div>
 
