--- a/Nav/Side Bar _css.html
+++ b/Nav/Side Bar _css.html
@@ -84,6 +84,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   overflow: auto;
   position: fixed;
   top: 0;
+  z-index: 99;
 }
 
 .navbar a {
