--- a/content_css.html
+++ b/content_css.html
@@ -4,6 +4,10 @@
   padding: 18px;
 }
 
+.empty{
+  font-size: 11px;
+}
+
 .basic {
   border: 1px solid #666; 
   padding: 5px; 
@@ -178,6 +182,11 @@
 
 .checkbox:hover{
   background-color: #f0f0f0;
+}
+
+.js-example-basic-multiple{
+  width: 70%;
+  z-index: 0;
 }
 
 </style>
